<resources>
    <string name="app_name">University-android-task2</string>
    <string name="age_radio_btn">Age</string>
    <string name="gender_radio_btn">Gender</string>
    <string name="ascending_sort_radio_btn">Ascending</string>
    <string name="descending_sort_radio_btn">Descending</string>
    <string name="man">man</string>
    <string name="woman">woman</string>
    <string name="age_gender_radio_buttons_weight">1</string>
    <string name="ascending_descending_radio_buttons_weight">1</string>
</resources>
