<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/age_gender_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/age_radio_button"
                android:layout_width="@dimen/age_gender_radio_buttons_width"
                android:layout_height="wrap_content"
                android:layout_weight="@string/age_gender_radio_buttons_weight"
                android:checked="true"
                android:text="@string/age_radio_btn" />

            <RadioButton
                android:id="@+id/gender_radio_button"
                android:layout_width="@dimen/age_gender_radio_buttons_width"
                android:layout_height="wrap_content"
                android:layout_weight="@string/age_gender_radio_buttons_weight"
                android:text="@string/gender_radio_btn" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/is_ascending_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/ascending_radio_button"
                android:layout_width="@dimen/is_ascending_radio_buttons_width"
                android:layout_height="wrap_content"
                android:layout_weight="@string/ascending_descending_radio_buttons_weight"
                android:checked="true"
                android:text="@string/ascending_sort_radio_btn" />

            <RadioButton
                android:id="@+id/descending_radio_button"
                android:layout_width="@dimen/is_ascending_radio_buttons_width"
                android:layout_height="wrap_content"
                android:layout_weight="@string/ascending_descending_radio_buttons_weight"
                android:text="@string/descending_sort_radio_btn" />
        </RadioGroup>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/persons_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:fabSize="normal"
        app:srcCompat="@drawable/add" />

</FrameLayout>